syntax = "proto3";
// edition = "2023";

package c2;

option go_package = "realm.pub/tavern/internal/c2/c2pb";

import "google/protobuf/timestamp.proto";
import "eldritch.proto";
import "portal.proto";

/*
 * Messages
 */

// Agent information to identify the type of beacon.
message Agent {
    string identifier = 1;
}

message Transport {
    string uri = 1;
    uint64 interval = 2;

    enum Type {
        TRANSPORT_UNSPECIFIED = 0;
        TRANSPORT_GRPC = 1;
        TRANSPORT_HTTP1 = 2;
        TRANSPORT_DNS = 3;
    }

    Type type = 3;
    string extra = 4;
}

message AvailableTransports {
    repeated Transport transports = 1;
    uint32 active_index = 2;
}

// Beacon information that is unique to the current running beacon.
message Beacon {
    string identifier = 1;
    string principal = 2;
    Host host = 3;
    Agent agent = 4;
    AvailableTransports available_transports = 5;
}

 // Host information for the system a beacon is running on.
message Host {
    string identifier = 1;
    string name = 2;

    enum Platform {
        PLATFORM_UNSPECIFIED = 0;
        PLATFORM_WINDOWS = 1;
        PLATFORM_LINUX = 2;
        PLATFORM_MACOS = 3;
        PLATFORM_BSD = 4;
    }

    Platform platform = 3;
    string primary_ip = 4;
}


// Task instructions for the beacon to execute.
message Task {
    int64 id = 1;
    eldritch.Tome tome = 2;
    string quest_name = 3;
    string jwt = 4;
}

message ShellTask {
    int64 id = 1;
    string input = 2;
    int64 shell_id = 3;
    uint64 sequence_id = 4;
    string stream_id = 5;
    string jwt = 6;
}

// TaskError provides information when task execution fails.
message TaskError {
    string msg = 1;
}

// TaskOutput provides information about a running task.
message TaskOutput {
    int64 id = 1;
    string output = 2;
    TaskError error = 3;

    // Indicates the UTC timestamp task execution began, set only in the first message for reporting.
    google.protobuf.Timestamp exec_started_at = 4;

    // Indicates the UTC timestamp task execution completed, set only in last message for reporting.
    google.protobuf.Timestamp exec_finished_at = 5;
}

message ShellTaskError {
    string msg = 1;
}

message ShellTaskOutput {
    int64 id = 1;
    string output = 2;
    ShellTaskError error = 3;

    // Indicates the UTC timestamp task execution began, set only in the first message for reporting.
    google.protobuf.Timestamp exec_started_at = 4;

    // Indicates the UTC timestamp task execution completed, set only in last message for reporting.
    google.protobuf.Timestamp exec_finished_at = 5;
}

// TaskContext contains task-specific information needed for C2 operations.
message TaskContext {
    int64 task_id = 1;
    string jwt = 2;
}

// ShellTaskContext contains shell task-specific information needed for C2 operations.
message ShellTaskContext {
    int64 task_id = 1;
    int64 shell_id = 2;
    string jwt = 3;
}

/*
 * RPC Messages
 */
message ClaimTasksRequest {
    Beacon beacon = 1;
}
message ClaimTasksResponse {
    repeated Task tasks = 1;
    repeated ShellTask shell_tasks = 2;
}

message FetchAssetRequest {
    oneof context {
        TaskContext task_context = 1;
        ShellTaskContext shell_context = 2;
    }
    string name = 3;

}
message FetchAssetResponse {
    bytes chunk = 1;
}

message ReportCredentialRequest {
    oneof context {
        TaskContext task_context = 1;
        ShellTaskContext shell_context = 2;
    }
    eldritch.Credential credential = 3;
}
message ReportCredentialResponse {}

enum ReportFileKind {
    REPORT_FILE_KIND_UNSPECIFIED = 0;
    REPORT_FILE_KIND_ONDISK = 1;
    REPORT_FILE_KIND_SCREENSHOT = 2;
}

message ReportFileRequest {
    oneof context {
        TaskContext task_context = 1;
        ShellTaskContext shell_context = 2;
    }
    ReportFileKind kind = 3;
    eldritch.File chunk = 4;
}
message ReportFileResponse {}

message ReportProcessListRequest {
    oneof context {
        TaskContext task_context = 1;
        ShellTaskContext shell_context = 2;
    }
    eldritch.ProcessList list = 3;
}
message ReportProcessListResponse {}

message ReportOutputRequest {
    oneof context {
        TaskContext task_context = 1;
        ShellTaskContext shell_context = 2;
    }
    oneof output {
        TaskOutput task_output = 3;
        ShellTaskOutput shell_task_output = 4;
    }
}

message ReportOutputResponse {}

enum ReverseShellMessageKind {
    REVERSE_SHELL_MESSAGE_KIND_UNSPECIFIED = 0;
    REVERSE_SHELL_MESSAGE_KIND_DATA = 1;
    REVERSE_SHELL_MESSAGE_KIND_PING = 2;
}

message ReverseShellRequest{
    oneof context {
        TaskContext task_context = 1;
        ShellTaskContext shell_context = 2;
    }
    ReverseShellMessageKind kind = 3;
    bytes data = 4;
}
message ReverseShellResponse{
    ReverseShellMessageKind kind = 1;
    bytes data = 2;
}

message CreatePortalRequest {
    oneof context {
        TaskContext task_context = 1;
        ShellTaskContext shell_context = 2;
    }
    portal.Mote mote = 3;
}
message CreatePortalResponse {
    portal.Mote mote = 2;
}

/*
 * Service
 */

service C2 {
    /*
     * Contact the server for new tasks to execute.
     */
    rpc ClaimTasks(ClaimTasksRequest) returns (ClaimTasksResponse) {}

    /*
     * Fetch an asset from the server, returning one or more chunks of data.
     * The maximum size of these chunks is determined by the server.
     * The server should reply with two headers:
     *   - "sha3-256-checksum": A SHA3-256 digest of the entire file contents.
     *   - "file-size": The number of bytes contained by the file.
     *
     * If no associated file can be found, a NotFound status error is returned.
     */
     rpc FetchAsset(FetchAssetRequest) returns (stream FetchAssetResponse);

    /*
     * Report a credential from the host to the server.
     */
     rpc ReportCredential(ReportCredentialRequest) returns (ReportCredentialResponse);

    /*
     * Report a file from the host to the server.
     * Providing content of the file is optional. If content is provided:
     *   - Hash will automatically be calculated and the provided hash will be ignored.
     *   - Size will automatically be calculated and the provided size will be ignored.
     *
     * Content is provided as chunks, the size of which are up to the agent to define (based on memory constraints).
     * Any existing files at the provided path for the host are replaced.
     */
     rpc ReportFile(stream ReportFileRequest) returns (ReportFileResponse);

    /*
     * Report the active list of running processes. This list will replace any previously reported
     * lists for the same host.
     */
    rpc ReportProcessList(ReportProcessListRequest) returns (ReportProcessListResponse);

    /*
     * Report execution output.
     */
    rpc ReportOutput(ReportOutputRequest) returns (ReportOutputResponse) {}

    /*
     * Open a reverse shell bi-directional stream.
     */
    rpc ReverseShell(stream ReverseShellRequest) returns (stream ReverseShellResponse) {}

    /*
     * Open a portal bi-directional stream.
     */
    rpc CreatePortal(stream CreatePortalRequest) returns (stream CreatePortalResponse) {}
}
